# fcat

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  rosdep.yaml
.github/: cog  python3-cogapp_3.3.0-3_all.deb
.github/workflows/: ros2_build_and_tag.yml
fcat/: CMakeLists.txt  README.md  package.xml
fcat/scripts/: fcat  setup_permisions.sh
fcat/src/: fcat_srvs_main.cpp
fcat_msgs/: .cppcheck_suppressions.txt  .gitignore
fcat_msgs/msg/: ActuatorCalibrateCmd.msg  ActuatorCstCmd.msg  ActuatorProfPosCmds.msg  ActuatorSetDigitalOutputCmd.msg  ActuatorSetOutputPositionCmd.msg  ActuatorState.msg  ActuatorStates.msg  AsyncSdoReadCmd.msg  CommanderState.msg  ConditionalStates.msg  EgdState.msg  EgdStates.msg  El1008States.msg  El2124State.msg  El2124States.msg  El2809States.msg  El3208States.msg  El3314State.msg  El3318States.msg  El3602States.msg  El4102WriteAllChannelsCmd.msg  El4102WriteChannelCmd.msg  FaulterEnableCmd.msg  FaulterState.msg  FilterState.msg  FilterStates.msg  Ild1900State.msg  LinearInterpolationStates.msg  PidActivateCmd.msg  PidState.msg  PidStates.msg  SaturationStates.msg  SchmittTriggerStates.msg
fcat_msgs/srv/: ActuatorProfTorqueService.srv  ActuatorProfVelService.srv  ActuatorSetDigitalOutputService.srv  ActuatorSetGainSchedulingIndexService.srv  ActuatorSetMaxCurrentService.srv  ActuatorSetProfDisengagingTimeoutService.srv  CommanderEnableService.srv  El2124WriteChannelService.srv  El2828WriteAllChannelsService.srv  El4102WriteChannelService.srv  TlcReadService.srv  TlcWriteService.srv
fcgen/: fastcat_types.yaml  fcat_gen_msgs.py
msg/: ActuatorCspCmd.msg  ActuatorCspCmds.msg  ActuatorCstCmd.msg  ActuatorCstCmds.msg  ActuatorCsvCmd.msg  ActuatorCsvCmds.msg  ActuatorProfPosCmd.msg  ActuatorProfPosCmds.msg  ActuatorProfTorqueCmd.msg  ActuatorProfVelCmd.msg  ActuatorSdoSetDrivePosCmd.msg  ActuatorSetGainSchedulingIndexCmd.msg  ActuatorSetGainSchedulingIndexCmds.msg  ActuatorSetGainSchedulingModeCmd.msg  ActuatorSetGainSchedulingModeCmds.msg  ActuatorSetMaxCurrentCmd.msg  ActuatorSetProfDisengagingTimeoutCmd.msg  ActuatorSetUnitModeCmd.msg  ActuatorState.msg  ActuatorStates.msg  AsyncSdoResponse.msg  AsyncSdoWriteCmd.msg  CommanderEnableCmd.msg  CommanderState.msg  CommanderStates.msg  ConditionalState.msg  ConditionalStates.msg  EgdCspCmd.msg  EgdCstCmd.msg  EgdCsvCmd.msg  EgdProfPosCmd.msg  EgdProfTorqueCmd.msg  EgdProfVelCmd.msg  EgdResetCmd.msg  EgdSdoSetDrivePosCmd.msg  EgdSdoSetUnitModeCmd.msg  EgdState.msg  EgdStates.msg  El1008State.msg  El2124State.msg  (+59 more)
msgs/: CommanderState.msg  EgdCspCmd.msg  EgdState.msg  El2124WriteAllChannelsCmd.msg  El2124WriteChannelCmd.msg
src/: fcat.cpp  fcat.hpp  fcat_callbacks.cpp  fcat_main.cpp  fcat_node.hpp  fcat_srvs.cpp  fcat_srvs.hpp  fcat_srvs_main.cpp  fcat_srvs_node.cpp  fcat_utils.cpp  fcat_utils.hpp
srv/: ActuatorCalibrateService.srv  ActuatorCspCmd.srv  ActuatorCstCmd.srv  ActuatorCsvCmd.srv  ActuatorProfPosCmd.srv  ActuatorProfPosService.srv  ActuatorProfTorqueCmd.srv  ActuatorProfVelCmd.srv  ActuatorResetCmd.srv  ActuatorSdoSetDrivePosCmd.srv  ActuatorSdoSetUnitModeCmd.srv  ActuatorSetGainSchedulingModeService.srv  ActuatorSetOutputPositionCmd.srv  ActuatorSetOutputPositionService.srv  ActuatorSetUnitModeService.srv  AllDeviceFaultCmd.srv  AllDeviceResetCmd.srv  AsyncSdoReadService.srv  AsyncSdoWriteService.srv  CommanderDisableService.srv  CommanderEnableCmd.srv  EgdCspCmd.srv  EgdCstCmd.srv  EgdCsvCmd.srv  EgdProfPosCmd.srv  EgdProfTorqueCmd.srv  EgdProfVelCmd.srv  EgdSdoSetDrivePosCmd.srv  EgdSdoSetUnitModeCmd.srv  El2124WriteAllChannelsCmd.srv  El2124WriteAllChannelsService.srv  El2124WriteChannelCmd.srv  El2798WriteChannelService.srv  El2809WriteAllChannelsService.srv  El4102WriteAllChannelsService.srv  FaulterEnableService.srv  FtsTareCmd.srv  JedSetCmdValueCmd.srv  NoArgsCmd.srv  PidActivateCmd.srv  (+2 more)
