<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fcat_msgs_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alexander.brinkman@jpl.nasa.gov">dev</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>action_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_generators</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
